add agreement page

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             <div class="img-cont">
                 <img src="./img/login-bg.png" alt="">
             </div>
-            <div class="login-form">
+            <div class="login-form send-form">
                 <form action="#">
                     <div class="login-header">
                         Здравствуйте!
