add detail-form page

--- a/agreement.html
+++ b/agreement.html
@@ -23,7 +23,7 @@
                 <img src="./img/login-bg.png" alt="">
             </div>
             <div class="agreement-form send-form">
-                <form action="#">
+                <form action="./thanks-for-registr.html">
                     <div class="login-header">
                         Пользовательськое соглашение!
                     </div>
