--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
                 <img src="./img/login-bg.png" alt="">
             </div>
             <div class="login-form send-form">
-                <form action="#">
+                <form action="./agreement.html">
                     <div class="login-header">
                         Здравствуйте!
                     </div>
