--- a/detail-form.html
+++ b/detail-form.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
     <link rel="stylesheet" href="./css/custom-select.css">
+    <link rel="stylesheet" href="./css/bootstrap-datepicker3.standalone.css">
     <link rel="stylesheet" href="./css/login.css">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
@@ -47,7 +48,7 @@
                         <input type="email" name="q-4" placeholder="E-mail" data-reqired value="serafimafinikova@gmail.com">
                     </div>
                     <div class="login-input">
-                        <input type="text" name="q-5" placeholder="Дата рождения" data-reqired value="21.15.1989">
+                        <input class="date-picker" type="text" name="q-5" placeholder="Дата рождения" value="21.15.1989">
                     </div>
                     <div class="login-input">
                         <select class="customselect" name="q-6">
@@ -71,6 +72,9 @@
         </div>
     </div>
     <script src="./js/custom_select.js"></script>
+    <script src="./js/jquery.inputmask.min.js"></script>
+    <script src="./js/bootstrap-datepicker.min.js"></script>
+    <script src="./js/bootstrap-datepicker.ru.min.js"></script>
     <script src="./js/login.js"></script>
 </body>
 </html>
