--- a/detail-form.html
+++ b/detail-form.html
@@ -25,7 +25,7 @@
                 <img src="./img/detail-form-bg.png" alt="">
             </div>
             <div class="login-form send-form">
-                <form action="./agreement.html">
+                <form action="./interests.html">
                     <div class="login-header">
                         Немного подробностей
                     </div>
