git add personal data page

--- a/completed_pools.html
+++ b/completed_pools.html
@@ -77,7 +77,7 @@
                     <div class="top-menu">
                         <ul>
                             <li>
-                                <a href="./index.html" class="active">
+                                <a href="./index.html">
                                     Все опросы
                                 </a>
                             </li>
@@ -87,7 +87,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="./completed_pools.html">
+                                <a href="./completed_pools.html" class="active">
                                     Пройденные
                                 </a>
                             </li>
@@ -106,10 +106,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -125,10 +122,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -144,10 +138,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -163,10 +154,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -182,10 +170,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -201,10 +186,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -220,10 +202,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -239,10 +218,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -258,10 +234,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -277,10 +250,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -296,10 +266,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
@@ -315,10 +282,7 @@
                                         </div>
                                     </div>
                                     <div class="col-right">
-                                        <a href="#" class="show-pool inactive">
-                                            <div class="tooltips">
-                                                Заполните информацию о себе и у вас появится доступ к опросам
-                                            </div>
+                                        <a href="#" class="show-pool">
                                         </a>
                                     </div>
                                 </div>
