--- a/saved_pools.html
+++ b/saved_pools.html
@@ -29,12 +29,12 @@
                     </div>
                     <nav class="left-menu">
                         <div class="menu-item active">
-                            <a href="#">
+                            <a href="./index.html">
                                 <div class="icon icon-all"></div>
                             </a>
                         </div>
                         <div class="menu-item">
-                            <a href="#">
+                            <a href="./personal_data.html">
                                 <div class="icon icon-personal"></div>
                             </a>
                         </div>
@@ -77,17 +77,17 @@
                     <div class="top-menu">
                         <ul>
                             <li>
-                                <a href="#" class="active">
+                                <a href="./index.html">
                                     Все опросы
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="./saved_pools.html" class="active">
                                     Сохраненные
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="./completed_pools.html">
                                     Пройденные
                                 </a>
                             </li>
