--- a/agreement.html
+++ b/agreement.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/login.css?35345">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -50,6 +50,9 @@
             </div>
         </div>
     </div>
-    <script src="./js/login.js"></script>
+    <div class="load-wrapper">
+        <div class="loader"></div>
+    </div>
+    <script src="./js/login.js?54635"></script>
 </body>
 </html>
