--- a/detail-form.html
+++ b/detail-form.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
     <link rel="stylesheet" href="./css/custom-select.css">
     <link rel="stylesheet" href="./css/bootstrap-datepicker3.standalone.css">
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/login.css?46578">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -71,10 +71,13 @@
             </div>
         </div>
     </div>
+    <div class="load-wrapper">
+        <div class="loader"></div>
+    </div>
     <script src="./js/custom_select.js"></script>
     <script src="./js/jquery.inputmask.min.js"></script>
     <script src="./js/bootstrap-datepicker.min.js"></script>
     <script src="./js/bootstrap-datepicker.ru.min.js"></script>
-    <script src="./js/login.js"></script>
+    <script src="./js/login.js?3523523"></script>
 </body>
 </html>
