--- a/interests.html
+++ b/interests.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/login.css?767543">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -118,7 +118,10 @@
             </form>
         </div>
     </div>
-    <script src="./js/login.js"></script>
+    <div class="load-wrapper">
+        <div class="loader"></div>
+    </div>
+    <script src="./js/login.js?35235"></script>
     <script>
         let moreInterests = [
             {
