--- a/interests_monthly.html
+++ b/interests_monthly.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/login.css?56789">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -25,7 +25,7 @@
             <div class="login-header-2">
                 У нас ежемесячное обновление тем опросов!
             </div>
-            <form action="#">
+            <form action="./index.html">
                 <div class="interests-list">
                     <div class="interest-item">
                         <input type="checkbox" name="q-1" id="q-1" value="Путешествия">
@@ -118,7 +118,10 @@
             </form>
         </div>
     </div>
-    <script src="./js/login.js"></script>
+    <div class="load-wrapper">
+        <div class="loader"></div>
+    </div>
+    <script src="./js/login.js?35235"></script>
     <script>
         let moreInterests = [
             {
