--- a/personal_data.html
+++ b/personal_data.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
     <link rel="stylesheet" href="./css/custom-select.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css?65456345">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -430,9 +430,12 @@
             </div>
         </div>
     </div>
+    <div class="load-wrapper">
+        <div class="loader"></div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="./js/custom_select.js"></script>
     <script src="./js/statistic_chart.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js?43636"></script>
 </body>
 </html>
