--- a/thanks-for-registr.html
+++ b/thanks-for-registr.html
@@ -7,7 +7,7 @@
     <title>Спасибо за регистрацию!</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/login.css?3523235">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -48,6 +48,9 @@
             </div>
         </div>
     </div>
-    <script src="./js/login.js"></script>
+    <div class="load-wrapper">
+        <div class="loader"></div>
+    </div>
+    <script src="./js/login.js?25235"></script>
 </body>
 </html>
