--- a/agreement.html
+++ b/agreement.html
@@ -25,7 +25,8 @@
             <div class="agreement-form send-form">
                 <form action="./thanks-for-registr.html">
                     <div class="login-header">
-                        Пользовательськое соглашение!
+                        Пользовательськое<br>
+                        соглашение!
                     </div>
                     <div class="under-header">
                         Настоящим, действуя своей волей и в своем интересе, даю согласие Poolcomment на обработку своих персональных данных  с целью изучения конъюнктуры рынка, получения и исследования статистических данных, участия в исследованиях, осуществления других видов деятельности в рамках законодательства РФ с обязательным выполнением требований законодательства РФ в области персональных данных, а также соглашаюсь с тем, что мои персональные данные могут быть переданы третьим лицам с соблюдением требований законодательства РФ и на условиях конфиденциальности в случае, если это необходимо для реализации вышеуказанных целей и выражаю свое согласие на получение  рекламных и иных материалов путем осуществления прямых контактов с использованием всех средств связи, включая, но не ограничиваясь: почтовая рассылка, СМС-рассылка, голосовая рассылка, рассылка электронных писем.
