--- a/login.html
+++ b/login.html
@@ -57,6 +57,6 @@
     <div class="load-wrapper">
         <div class="loader"></div>
     </div>
-    <script src="./js/login?867543"></script>
+    <script src="./js/login.js?867543"></script>
 </body>
 </html>
