--- a/thanks-for-registr.html
+++ b/thanks-for-registr.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="btns-cont">
                     <div class="btn-cont">
-                        <a href="./detail-form.html" class="btn-submit">
+                        <a href="./detail-form.html" class="btn-submit active">
                             Начать работать
                         </a>
                     </div>
