hide pop up on detail-form.pahe

--- a/detail-form.html
+++ b/detail-form.html
@@ -29,7 +29,7 @@
                     <div class="login-header">
                         Немного подробностей
                     </div>
-                    <div class="detail-form-text-cont">
+                    <div class="detail-form-text-cont text-popUp">
                         <div class="detail-form-text">
                             Давайте сверим,<br>
                             все ли данные внесены верно
