hover on pool item

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="right-side">
             <div class="top-panel">
                 <div class="btn-cont">
-                    <a href="#" class="btn-orange">
+                    <a href="#" class="btn-orange btn-putInfo">
                         Заполнить информацию
                     </a>
                 </div>
