cache, center login form

--- a/detail-form.html
+++ b/detail-form.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
     <link rel="stylesheet" href="./css/custom-select.css">
     <link rel="stylesheet" href="./css/bootstrap-datepicker3.standalone.css">
-    <link rel="stylesheet" href="./css/login.css?46578">
+    <link rel="stylesheet" href="./css/login.css?685764w4678">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -78,6 +78,6 @@
     <script src="./js/jquery.inputmask.min.js"></script>
     <script src="./js/bootstrap-datepicker.min.js"></script>
     <script src="./js/bootstrap-datepicker.ru.min.js"></script>
-    <script src="./js/login.js?3523523"></script>
+    <script src="./js/login.js?76453678"></script>
 </body>
 </html>
