--- a/interests.html
+++ b/interests.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css?767543">
+    <link rel="stylesheet" href="./css/login.css?8564763657869">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -121,7 +121,7 @@
     <div class="load-wrapper">
         <div class="loader"></div>
     </div>
-    <script src="./js/login.js?35235"></script>
+    <script src="./js/login.js?57463245678"></script>
     <script>
         let moreInterests = [
             {
