--- a/saved_pools.html
+++ b/saved_pools.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
     <link rel="stylesheet" href="./css/custom-select.css">
-    <link rel="stylesheet" href="./css/style.css?454453">
+    <link rel="stylesheet" href="./css/style.css?57645346789">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -347,6 +347,6 @@
     <script src="./js/apexcharts.min.js"></script>
     <script src="./js/custom_select.js"></script>
     <script src="./js/statistic_chart.js"></script>
-    <script src="./js/script.js?356346"></script>
+    <script src="./js/script.js?574635254657689"></script>
 </body>
 </html>
