--- a/thanks-for-registr.html
+++ b/thanks-for-registr.html
@@ -7,7 +7,7 @@
     <title>Спасибо за регистрацию!</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css?3523235">
+    <link rel="stylesheet" href="./css/login.css?758756534235678">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -51,6 +51,6 @@
     <div class="load-wrapper">
         <div class="loader"></div>
     </div>
-    <script src="./js/login.js?25235"></script>
+    <script src="./js/login.js?796854454678"></script>
 </body>
 </html>
