--- a/agreement.html
+++ b/agreement.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css?35345">
+    <link rel="stylesheet" href="./css/login.css?4356543">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -54,6 +54,6 @@
     <div class="load-wrapper">
         <div class="loader"></div>
     </div>
-    <script src="./js/login.js?54635"></script>
+    <script src="./js/login.js?87653467"></script>
 </body>
 </html>
