--- a/completed_pools.html
+++ b/completed_pools.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
     <link rel="stylesheet" href="./css/custom-select.css">
-    <link rel="stylesheet" href="./css/style.css?54678">
+    <link rel="stylesheet" href="./css/style.css?65743567">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -347,6 +347,6 @@
     <script src="./js/apexcharts.min.js"></script>
     <script src="./js/custom_select.js"></script>
     <script src="./js/statistic_chart.js"></script>
-    <script src="./js/script.js?523423"></script>
+    <script src="./js/script.js?5746346"></script>
 </body>
 </html>
