--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
     <link rel="stylesheet" href="./css/custom-select.css">
-    <link rel="stylesheet" href="./css/style.css?534678">
+    <link rel="stylesheet" href="./css/style.css?6574354678">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -383,6 +383,6 @@
     <script src="./js/apexcharts.min.js"></script>
     <script src="./js/custom_select.js"></script>
     <script src="./js/statistic_chart.js"></script>
-    <script src="./js/script.js?345235"></script>
+    <script src="./js/script.js?76545678"></script>
 </body>
 </html>
