--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css?65534354">
+    <link rel="stylesheet" href="./css/login.css?86576564789">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -22,7 +22,7 @@
             <div class="img-cont">
                 <img src="./img/login-bg.png" alt="">
             </div>
-            <div class="login-form send-form">
+            <div class="login-form send-form formCenter">
                 <form action="./agreement.html">
                     <div class="login-header">
                         Здравствуйте!
@@ -57,6 +57,6 @@
     <div class="load-wrapper">
         <div class="loader"></div>
     </div>
-    <script src="./js/login.js?867543"></script>
+    <script src="./js/login.js?57645346789"></script>
 </body>
 </html>
