--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css?86576564789">
+    <link rel="stylesheet" href="./css/login.css?86754678">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -22,7 +22,7 @@
             <div class="img-cont">
                 <img src="./img/login-bg.png" alt="">
             </div>
-            <div class="login-form send-form formCenter">
+            <div class="login-form send-form">
                 <form action="./agreement.html">
                     <div class="login-header">
                         Здравствуйте!
