add gaq faq and chat blocks

--- a/index.html
+++ b/index.html
@@ -48,11 +48,50 @@
                     </nav>
                 </div>
                 <div class="bottom-content">
+                    <div class="faq-icon-wrap">
+                        <div class="faq-icon show-faq-block">
+                        </div>
+                    </div>
+                    <div class="chat-wrapper">
+                        <div class="chat-top">
+                            <div class="expand"></div>
+                        </div>
+                        <div class="messages-block">
+                            <div class="messages-wrap">
+                                <div class="message-block user-massage">
+                                    <div class="message-text">
+                                        Здравствуйте! У меня не получается кое-что сделать 
+                                    </div>
+                                    <div class="message-time">11:21</div>
+                                </div>
+                                <div class="message-block admin-massage">
+                                    <div class="message-text">
+                                        Добрый день, Серафима! Что именно у вас не получается?
+                                    </div>
+                                    <div class="message-time">11:22</div>
+                                </div>
+                                <div class="message-block user-massage">
+                                    <div class="message-text">
+                                        Что-то очень важное
+                                    </div>
+                                    <div class="message-time">11:21</div>
+                                </div>
+                                <div class="message-block admin-massage">
+                                    <div class="message-text">
+                                        ...
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="message-input-wrap">
+                            <textarea name="message" rows="1" placeholder="Напишите, что вас беспокоит"></textarea>
+                        </div>
+                    </div>
                     <div class="faq-block">
                         <div class="faq-header">
                             Может, помочь?
                         </div>
-                        <a href="#" class="faq-btn">
+                        <a href="#" class="faq-btn show-chat">
                             Да, пожалуйста
                         </a>
                         <div class="faq-img">
