fox chat wrapper

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                             </div>
                         </div>
                         <div class="message-input-wrap">
-                            <textarea name="message" rows="1" placeholder="Напишите, что вас беспокоит"></textarea>
+                            <form action="#">
+                                <textarea name="message" rows="1" placeholder="Напишите, что вас беспокоит"></textarea>
+                            </form>
                         </div>
                     </div>
                     <div class="faq-block">
