add scroll smothly to next notification

--- a/index.html
+++ b/index.html
@@ -201,8 +201,16 @@
                                 <div class="header">
                                     Добро пожаловать!
                                 </div>
-                                <div class="text">
-                                    Рады видеть вас снова
+                                <div class="notifications">
+                                    <div class="notification unread current">
+                                        <a href="#">Для вас открыт новый опрос, хотите пройти?</a>
+                                    </div>
+                                    <div class="notification">
+                                        <a href="#">Вы не закончили опрос, хотите закончить?</a>
+                                    </div>
+                                    <div class="notification unread">
+                                        <a href="#">Для вас открыт новый опрос, хотите пройти?</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="img-col">
