change notifications block

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./font/Ballo/stylesheet.css">
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/custom-select.css">
-    <link rel="stylesheet" href="./css/style.css?6574354678">
+    <link rel="stylesheet" href="./css/style.css?346346345345">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -206,10 +206,10 @@
                                         <a href="#">Для вас открыт новый опрос, хотите пройти?</a>
                                     </div>
                                     <div class="notification">
-                                        <a href="#">Вы не закончили опрос, хотите закончить?</a>
+                                        <a href="#">Просмотрите результаты за последние полгода</a>
                                     </div>
                                     <div class="notification unread">
-                                        <a href="#">Для вас открыт новый опрос, хотите пройти?</a>
+                                        <a href="#">Завершите тест, вам осталось 9%</a>
                                     </div>
                                 </div>
                             </div>
@@ -414,6 +414,6 @@
     <script src="./js/custom_select.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/statistic_chart.js"></script>
-    <script src="./js/script.js?76545678"></script>
+    <script src="./js/script.js?6457345235"></script>
 </body>
 </html>
