add main message in notification

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./font/Ballo/stylesheet.css">
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/custom-select.css">
-    <link rel="stylesheet" href="./css/style.css?3534634535">
+    <link rel="stylesheet" href="./css/style.css?76798345235">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
@@ -203,13 +203,13 @@
                                 </div>
                                 <div class="notifications">
                                     <div class="notification unread current">
-                                        <a href="#">Для вас открыт новый опрос, хотите пройти?</a>
+                                        <a href="#">Для вас открыт новый опрос, <span class="main-text">хотите пройти?</span></a>
                                     </div>
                                     <div class="notification">
-                                        <a href="#">Просмотрите результаты за последние полгода</a>
+                                        <a href="#"><span class="main-text">Просмотрите результаты</span> за последние полгода</a>
                                     </div>
-                                    <div class="notification unread">
-                                        <a href="#">Завершите тест, вам осталось 9%</a>
+                                    <div class="notification">
+                                        <a href="#"><span class="main-text">Завершите</span> тест, вам осталось 9%</a>
                                     </div>
                                 </div>
                             </div>
