--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                         <input type="text" name="q-1" placeholder="Имя" data-reqired>
                     </div>
                     <div class="login-input">
-                        <input type="text" name="q-1" placeholder="Введите еmail или номер телефона" data-reqired>
+                        <input type="email" name="q-1" placeholder="Введите еmail" data-reqired>
                     </div>
                     <div class="btns-cont">
                         <div class="btn-cont">
