--- a/registration.html
+++ b/registration.html
@@ -25,10 +25,13 @@
             <div class="login-form send-form">
                 <form action="./agreement.html">
                     <div class="login-header">
-                        С возвращением!
+                        Здравствуйте!
                     </div>
                     <div class="under-header">
-                        Еще нет аккаунта? <a href="./registration.html" class="bold">Зарегистрируйтесь</a>
+                        Уже есть аккаунт? <a href="./login.html" class="bold">Войдите</a>
+                    </div>
+                    <div class="login-input">
+                        <input type="text" name="q-1" placeholder="Имя" data-reqired>
                     </div>
                     <div class="login-input">
                         <input type="email" name="q-1" placeholder="Введите еmail" data-reqired>
