change registation page

--- a/login.html
+++ b/login.html
@@ -20,21 +20,21 @@
         </div>
         <div class="login-content">
             <div class="img-cont">
-                <img src="./img/login-bg.png" alt="">
+                <img src="./img/login2-bg.png" alt="">
             </div>
             <div class="login-form send-form">
                 <form action="./agreement.html">
                     <div class="login-header">
-                        С возвращением!
+                        Вход
                     </div>
                     <div class="under-header">
-                        Еще нет аккаунта? <a href="./registration.html" class="bold">Зарегистрируйтесь</a>
+                        Нет аккаунта? <a href="./registration.html" class="bold">Зарегестрируйтесь</a>
+                    </div>
+                    <div class="login-input">
+                        <input type="text" name="q-1" placeholder="Имя" data-reqired>
                     </div>
                     <div class="login-input">
                         <input type="email" name="q-1" placeholder="Введите еmail" data-reqired>
-                    </div>
-                    <div class="login-input">
-                        <input type="password" name="q-1" placeholder="Введите пароль" data-reqired>
                     </div>
                     <div class="btns-cont">
                         <div class="btn-cont">
