chnage font weight

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>Все опросы</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
     <link rel="stylesheet" href="./font/Ballo/stylesheet.css">
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/custom-select.css">
-    <link rel="stylesheet" href="./css/style.css?76798345235">
+    <link rel="stylesheet" href="./css/style.css?786758769">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
