--- a/agreement.html
+++ b/agreement.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>Login</title>
 
-    <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
+    <link rel="stylesheet" href="./font/Gilroy_2/stylesheet.css">
     <link rel="stylesheet" href="./css/login.css?4356543">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
