--- a/detail-form.html
+++ b/detail-form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Немного подробностей</title>
 
-    <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
+    <link rel="stylesheet" href="./font/Gilroy_2/stylesheet.css">
     <link rel="stylesheet" href="./css/custom-select.css">
     <link rel="stylesheet" href="./css/bootstrap-datepicker3.standalone.css">
     <link rel="stylesheet" href="./css/login.css?685764w4678">
