--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="./css/login.css?58759698">
+    <link rel="stylesheet" href="./css/login.css?98986">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
 </head>
