--- a/thanks-for-registr.html
+++ b/thanks-for-registr.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спасибо за регистрацию!</title>
 
-    <link rel="stylesheet" href="./font/Gilroy/stylesheet.css">
+    <link rel="stylesheet" href="./font/Gilroy_2/stylesheet.css">
     <link rel="stylesheet" href="./css/login.css?758756534235678">
 
     <script src="./js/jquery-3.5.1.min.js"></script>
