--- a/survey.html
+++ b/survey.html
@@ -318,6 +318,6 @@
     <script src="./js/video-radio-star.js"></script>
     <script src="./js/intlTelInput.js"></script>
     <script src="./js/script.js"></script>
-    <script src="./js/survey.js"></script>
+    <script src="./js/survey.js?6778987"></script>
 </body>
 </html>
